Fixed travel duration mobile design

--- a/src/app/modules/wizard/components/travel-duration/travel-duration.component.scss
+++ b/src/app/modules/wizard/components/travel-duration/travel-duration.component.scss
@@ -4,31 +4,39 @@
 .travel-duration {
     .container-fluid {
         min-height: calc(100vh - #{$header-height} - #{$progress-bar-height} - 1px);
+
         .title {
             color: $primary-color;
             font-size: 20px;
         }
+
         .choices {
             margin: auto;
             width: 70%;
+
             .date-picker {
                 &.from {
                     text-align: right;
+
                     html.rtl & {
                         text-align: left;
                     }
                 }
+
                 &.to {
                     text-align: left;
+
                     html.rtl & {
                         text-align: right;
                     }
                 }
+
                 p-calendar {
                     .ui-widget {
                         top: 0 !important;
                         border-radius: 5px !important;
                     }
+
                     .ui-calendar {
                         display: flex;
                         align-items: center;
@@ -40,11 +48,13 @@
                         padding: 0.5rem;
                         border-radius: 5px;
                         background-color: $white;
+
                         .ui-inputtext {
                             width: -webkit-fill-available;
                             width: -moz-available;
                             border: none;
                         }
+
                         .ui-calendar-button {
                             border: none !important;
                             background-color: $white;
@@ -52,18 +62,22 @@
                             font-size: 1.5rem;
                         }
                     }
+
                     .ui-calendar {
                         .ui-datepicker {
                             background-color: white;
                             border-radius: 5px;
                             border: none;
                             @include shadow();
+
                             .ui-datepicker-group {
                                 padding-bottom: 1rem;
+
                                 .ui-datepicker-header {
                                     .ui-datepicker-title {
                                         display: flex;
                                         justify-content: center;
+
                                         select {
                                             outline: none;
                                             border: none;
@@ -71,20 +85,24 @@
                                         }
                                     }
                                 }
+
                                 .ui-datepicker-calendar-container {
                                     .ui-datepicker-calendar {
                                         a {
                                             border-radius: 5px;
                                             color: black;
+
                                             &.ui-state-active {
                                                 background-color: $white;
                                                 color: white;
                                             }
+
                                             &:hover {
                                                 background-color: $grey;
                                                 color: white;
                                             }
                                         }
+
                                         span.ui-state-disabled {
                                             cursor: not-allowed !important;
                                             opacity: 0.5;
@@ -92,6 +110,7 @@
                                     }
                                 }
                             }
+
                             .ui-datepicker-buttonbar {
                                 display: none;
                             }
@@ -100,6 +119,7 @@
                 }
             }
         }
+
         .validation-messages {
             .validation-message {
                 color: $red;
@@ -111,8 +131,9 @@
 // mobile
 @media all and (max-width:576px) {
     .travel-duration {
-        .date-pickers {
+        .choices {
             width: 100%;
+
             .date-picker {
                 display: flex;
                 justify-content: center;
